frontend/test/should_fail/pattern_006b.grg
using patt;

pattern Foo modify(a:A, b:B)
{
	n:Node;
	
	modify {
		a --> n <-- b;
	}	
}

rule r {
	foo:Foo();

	modify {
		a:Node;
		b:A; 
		foo(a, b);
	}
}